Update CODEOWNERS and README.md for clarity and formatting improvements

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,7 +1,9 @@
 # Default code owner for the entire repository
+
 * @procount
 
-# Code owners for specific directories or files
+## Code owners for specific directories or files
+
 /os/ @procount
 /os/os_testing.json @procount
 /README.md @procount
